--- a/app/src/main/res/layout/saved.xml
+++ b/app/src/main/res/layout/saved.xml
@@ -5,5 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".saved">
+    <ScrollView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+    <TextView
+      android:id="@+id/tvResult"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:padding="8dp"
+      android:textSize="16sp"
+      android:textStyle="bold" />
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
